# cortex

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SECURITY.md  mypy.ini  package.json  pyproject.toml  requirements.txt
.cursor/rules/: ironclad-workflow.mdc  memory-context-claude-ai-base.mdc
.github/: BRANCH_PROTECTION.md  SECURITY-REVIEW.md  dependabot.yml
.github/workflows/: ci.yml
.workflow/checklists/: security-review.md  verify-checklist.md
.workflow/templates/: pr-template.md  session-template.md
docs/research/: MASTER-PLAN.md
docs/sessions/: SESSION-2026-01-31-evaluation-response.md  SESSION-2026-01-31-tier0-phase3.md  SESSION-2026-01-31-tier0-phase4.md  SESSION-2026-01-31-tier0-phase6-hooks.md  SESSION-2026-02-05-phase2-test-automation.md  SESSION-2026-02-05-phase3-baseline-automation.md
docs/testing/: AB-COMPARISON-TEMPLATE.md  AUTOMATED-TESTING-RESULTS.md  BASELINE-DATA-TEMPLATE.md  CORTEX-PROJECT-NOTION-IMPORT.md  MANUAL-TESTING-TEMPLATE.md  PHASE3-BASELINE-GUIDE.md  README.md  SETUP-VERIFICATION-CHECKLIST.md
scripts/: ai-review.js  ship.js  verify.js
src/cortex/: __init__.py  __main__.py  briefing.py  cli.py  extractors.py  hooks.py  store.py  transcript.py
src/memory_context_claude_ai/: __init__.py  __main__.py  briefing.py  cli.py  (+2 more)
templates/: cortex-memory-instructions.md
tests/: __init__.py  conftest.py  test_briefing.py  test_cli.py  test_config.py  test_extractors.py  test_hooks.py  test_integration.py  test_models.py  test_placeholder.py  test_project.py  test_store.py  test_transcript.py
(+15 files in other folders)
